@@ -27,6 +27,10 @@ ModificationSet
 * Fixed bogus "A modification was detected in the future" message
 * Now properly checks time of modficiations that are added as elements
 
+PluginXMLHelper
+----------------------
+* add support for nested elements via add(<Type>)
+
 Project
 ----------------------
 * Now fires BuildProgressEvents and BuildResultEvents. Patch by Michael Beauregard
